--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
-h1, p {
+h1,
+p {
   font-family: Lato;
+}
+
+.item1 {
+  grid-area: input;
+}
+.item2 {
+  grid-area: chart;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-areas: "input chart chart";
+  grid-gap: 10px;
+  padding: 10px;
 }
